--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,6 @@ django-cors-headers==4.7.0
 django-daraja==1.3.0
 africastalking==1.2.9
 cloudinary==1.37.0
+requests==2.31.0
+python-decouple==3.8
 
